--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -108,7 +108,7 @@ section.contact {
     flex-direction: column;
     align-items: center;
     color: $darkColor;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     a[href^="mailto"] {
       color: inherit;
       text-decoration: underline;
