--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -44,6 +44,11 @@ p,
   margin: 0 auto;
 }
 
+section.about br {
+  display: block;
+  margin: 4px 0;
+}
+
 
 
 
