--- a/sass/main.css
+++ b/sass/main.css
@@ -316,6 +316,11 @@ p,
   margin: 0 auto;
 }
 
+section.about br {
+  display: block;
+  margin: 4px 0;
+}
+
 header {
   background-image: url(../assets/stardust_@2X.png);
   background-attachment: fixed;
@@ -665,7 +670,7 @@ header i.fas {
 section.about {
   height: auto;
   background-color: #EFEFF0;
-  padding-bottom: 100px;
+  padding-bottom: 50px;
 }
 
 section.about .bodyLine {
@@ -682,15 +687,10 @@ section.about .eventLine p {
 }
 
 section.about h3 {
-  font-family: 'Hamburg Hand Light';
+  font-family: 'Source Sans Pro';
   color: #444349;
-  letter-spacing: 1px;
-  text-align: left;
-  font-size: 19px;
-  font-weight: 400;
-  line-height: 1.3;
-  margin-top: 0;
-  margin-bottom: 15px;
+  font-size: 23px;
+  margin-top: 0px;
 }
 
 section.about .resume {
@@ -944,7 +944,7 @@ section.contact .phone {
       -ms-flex-align: center;
           align-items: center;
   color: #444349;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 section.contact .phone a[href^="mailto"] {
